fixed the proceed overlapping text on iphone added animation to it

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -45,6 +45,9 @@
   height: fit-content;
   overflow-y: auto;
   overflow-x: hidden;
+  @media (max-width: 555px) {
+    height: 80vh;
+  }
 
 }
 
