--- a/src/components/proceed/style.module.scss
+++ b/src/components/proceed/style.module.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 1rem;
-
+    height: fit-content;
     h2 {
         font-size: var(--bigger-font-size);
         font-family: var(--title-font);
@@ -21,6 +21,7 @@
         display: flex;
         width: 100%;
         justify-content: space-between;
+
     }
 
     &_column {
@@ -30,7 +31,7 @@
         justify-content: flex-start;
         width: 100%;
         gap: 1rem;
-
+        height: fit-content;
         h3 {
             font-size: var(--semi-big-font-size);
             font-family: var(--title-font);
@@ -53,6 +54,7 @@
 
             @media (max-width: 555px) {
                 gap: 0.5rem;
+
             }
 
             li {
@@ -90,12 +92,19 @@
 
         @media (max-width: 555px) {
             gap: 0.5rem;
+            flex-direction: column;
         }
 
         img {
             width: 10rem;
             height: 7rem;
             object-fit: cover;
+            position: relative;
+            @media (max-width: 555px) {
+                width: 100%;
+                height: 20vh;
+                border-radius: 0.5rem;
+            }
         }
 
     }
